# mcp-server-poc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py  schemas.py
app/routers/: agent.py  system.py  tools.py
app/services/: agent_runner.py  tool_registry.py
app/utils/: logger.py
data/: seed_data.sql
evals/: golden_prompts.json  run_evals.py
tests/: conftest.py  test_api.py  test_tools.py
